--- a/7ow.CurrentPlayingMedia.nuspec
+++ b/7ow.CurrentPlayingMedia.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>7ow.CurrentPlayingMedia</id>
     <version>1</version>
-    <authors>7ow</authors>
+    <authors>owtysm</authors>
     <owners>itzkxhu</owners>
     <description>Access information about the media that's currently playing on the Windows system.</description>
     <license type="expression">Unlicense</license>
